<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/top_icon"
        android:title="@string/home"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat_selector_sh"
        android:title="@string/Chat"
        app:showAsAction="withText" />

    <item
        app:showAsAction="withText"
        android:id="@+id/navigation_camera"
        android:icon="@drawable/camera_selector"
        android:title="@string/Camera" />

    <item
        app:showAsAction="withText"
        android:id="@+id/navigation_call"
        android:icon="@drawable/call_selector"
        android:title="@string/Call" />
    <item
        app:showAsAction="withText"
        android:id="@+id/navigation_setting"
        android:icon="@drawable/setting_selector"
        android:title="@string/Settings" />

</menu>