<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        app:layout_behavior="@string/bottom_sheet_behavior">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/are_you_sure"
            android:textAppearance="@style/regular"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@+id/textView42"
            app:layout_constraintTop_toBottomOf="@+id/textView42" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_21sdp"
            android:text="@string/signing_out"
            android:textAppearance="@style/semiBold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/noBtn"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/no"
            app:backgroundTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/yesBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/yesBtn"
            app:layout_constraintTop_toTopOf="@+id/yesBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yesBtn"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/yes"
            app:backgroundTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/noBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
