<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:text="@string/invite_friends"
                    android:textAppearance="@style/semiBold"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/closeBtn"
                    app:layout_constraintEnd_toStartOf="@+id/closeBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/closeBtn" />

                <com.google.android.material.textview.MaterialTextView
                   android:visibility="gone"
                    android:id="@+id/message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/share_message"
                    android:textAppearance="@style/regular"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintEnd_toEndOf="@+id/closeBtn"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@+id/title" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/moreBtn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_24sdp"
                    android:text="@string/more"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_9ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/messageBtn"
                    app:layout_constraintStart_toStartOf="@+id/messageBtn"
                    app:layout_constraintTop_toBottomOf="@+id/messageBtn"
                    app:strokeColor="@color/blue"
                    app:strokeWidth="@dimen/_1sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mailBtn"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/mail"
                    android:textSize="@dimen/_9ssp"
                    app:layout_constraintEnd_toEndOf="@+id/copyBtn"
                    app:layout_constraintStart_toStartOf="@+id/copyBtn"
                    app:layout_constraintTop_toBottomOf="@+id/copyBtn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/copyBtn"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/copy_invite"
                    android:textSize="@dimen/_9ssp"
                    app:layout_constraintEnd_toEndOf="@+id/textView40"
                    app:layout_constraintStart_toStartOf="@+id/textView40"
                    app:layout_constraintTop_toBottomOf="@+id/textView40" />



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/messageBtn"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/message"
                    android:textSize="@dimen/_9ssp"
                    app:layout_constraintEnd_toEndOf="@+id/mailBtn"
                    app:layout_constraintStart_toStartOf="@+id/mailBtn"
                    app:layout_constraintTop_toBottomOf="@+id/mailBtn" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/closeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_close" />

                <com.google.android.material.textview.MaterialTextView
                    android:visibility="gone"
                    android:id="@+id/textView40"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/vadify_link"
                    android:textAppearance="@style/regular"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintEnd_toEndOf="@+id/message"
                    app:layout_constraintStart_toStartOf="@+id/message"
                    app:layout_constraintTop_toBottomOf="@+id/message" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
