<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_marginEnd="@dimen/_33sdp"
                    android:layout_marginRight="@dimen/_33sdp"
                    android:text="@string/vadify_would_like_to_access_your_contacts"
                    android:textAppearance="@style/semiBold"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_11sdp"
                    android:text="@string/vadify_contact_message"
                    android:textAppearance="@style/regular"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintEnd_toEndOf="@+id/title"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dontAllowBtn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:layout_marginBottom="@dimen/_14sdp"
                    android:text="@string/dont_allow"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_9ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/submitBtn"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="@+id/message"
                    app:layout_constraintTop_toBottomOf="@+id/message"
                    app:strokeColor="@color/blue"
                    app:strokeWidth="@dimen/_1sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitBtn"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12ssp"
                    android:layout_marginLeft="@dimen/_12ssp"
                    android:text="@string/ok"
                    android:textSize="@dimen/_9ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/dontAllowBtn"
                    app:layout_constraintEnd_toEndOf="@+id/message"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/dontAllowBtn"
                    app:layout_constraintTop_toTopOf="@+id/dontAllowBtn" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
